bottom half correctly aligned

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,6 +66,27 @@
     color: white;
 }
 
+#legend {
+    width: 10%;
+    float: left;
+    height: 300px;
+    color: green;
+}
+
+#line_chart {
+    width: 50%;
+    float: left;
+    height: 300px;
+    color: white;
+}
+
+#donut_chart {
+    width: 50%;
+    float: right;
+    height: 300px;
+    color: white;
+}
+
 #bottom_half{
     width: 100%;
     height: 50%;
